compilers4/dkk.output
Terminals unused in grammar

   LPAR
   RPAR


Grammar

    0 $accept: program $end

    1 program: global_declarations main_function

    2 global_declarations: global_declarations global_declaration
    3                    | %empty

    4 global_declaration: typedef_declaration
    5                   | const_declaration
    6                   | class_declaration
    7                   | union_declaration
    8                   | global_var_declaration
    9                   | func_declaration

   10 $@1: %empty

   11 typedef_declaration: TYPEDEF typename listspec ID $@1 dims SEMI

   12 typename: standard_type
   13         | ID

   14 standard_type: CHAR
   15              | INT
   16              | FLOAT
   17              | VOID

   18 listspec: LIST
   19         | %empty

   20 dims: dims LBRACK ICONST RBRACK
   21     | dims LBRACK RBRACK
   22     | %empty

   23 const_declaration: CONST typename constdefs SEMI

   24 constdefs: constdefs COMMA constdef
   25          | constdef

   26 constdef: ID dims ASSIGN init_value

   27 expression: expression OROP expression
   28           | expression ANDOP expression
   29           | expression EQUOP expression
   30           | expression RELOP expression
   31           | expression ADDOP expression
   32           | expression MULOP expression
   33           | NOTOP expression
   34           | ADDOP expression
   35           | SIZEOP expression
   36           | INCDEC variable
   37           | variable INCDEC
   38           | variable
   39           | variable LPAREN expression_list RPAREN
   40           | LENGTH LPAREN general_expression RPAREN
   41           | NEW LPAREN general_expression RPAREN
   42           | constant
   43           | LPAREN general_expression RPAREN
   44           | LPAREN standard_type RPAREN
   45           | listexpression

   46 variable: variable LBRACK general_expression RBRACK
   47         | variable DOT ID
   48         | LISTFUNC LPAREN general_expression RPAREN
   49         | decltype ID
   50         | THIS

   51 general_expression: general_expression COMMA general_expression
   52                   | assignment

   53 assignment: variable ASSIGN assignment
   54           | variable ASSIGN STRING
   55           | expression

   56 expression_list: general_expression
   57                | %empty

   58 constant: CCONST
   59         | ICONST
   60         | FCONST

   61 listexpression: LBRACK expression_list RBRACK

   62 $@2: %empty

   63 class_declaration: CLASS ID $@2 class_body SEMI

   64 class_body: parent LBRACE members_methods RBRACE

   65 parent: COLON ID
   66       | %empty

   67 members_methods: members_methods access member_or_method
   68                | access member_or_method

   69 access: PRIVATE COLON
   70       | PROTECTED COLON
   71       | PUBLIC COLON
   72       | %empty

   73 member_or_method: member
   74                 | method

   75 member: var_declaration
   76       | anonymous_union

   77 var_declaration: typename variabledefs SEMI

   78 variabledefs: variabledefs COMMA variabledef
   79             | variabledef

   80 $@3: %empty

   81 variabledef: LIST ID $@3 dims

   82 $@4: %empty

   83 variabledef: ID $@4 dims

   84 anonymous_union: UNION union_body SEMI

   85 union_body: LBRACE fields RBRACE

   86 fields: fields field
   87       | field

   88 field: var_declaration

   89 method: short_func_declaration

   90 short_func_declaration: short_par_func_header SEMI
   91                       | nopar_func_header SEMI

   92 short_par_func_header: func_header_start LPAREN parameter_types RPAREN

   93 func_header_start: typename ID
   94                  | LIST ID

   95 parameter_types: parameter_types COMMA typename pass_list_dims
   96                | typename pass_list_dims

   97 pass_list_dims: listspec dims
   98               | REFER

   99 nopar_func_header: func_header_start LPAREN RPAREN

  100 $@5: %empty

  101 union_declaration: UNION ID $@5 union_body SEMI

  102 global_var_declaration: typename init_variabledefs SEMI

  103 init_variabledefs: init_variabledefs COMMA init_variabledef
  104                  | init_variabledef

  105 init_variabledef: variabledef initializer

  106 $@6: %empty

  107 initializer: ASSIGN $@6 init_value
  108            | %empty

  109 init_value: expression
  110           | LBRACE init_values RBRACE
  111           | STRING

  112 init_values: init_values COMMA init_value
  113            | init_value

  114 func_declaration: short_func_declaration
  115                 | full_func_declaration

  116 $@7: %empty

  117 full_func_declaration: full_par_func_header $@7 LBRACE decl_statements RBRACE

  118 $@8: %empty

  119 full_func_declaration: nopar_class_func_header $@8 LBRACE decl_statements RBRACE

  120 $@9: %empty

  121 full_func_declaration: nopar_func_header $@9 LBRACE decl_statements RBRACE

  122 full_par_func_header: class_func_header_start LPAREN parameter_list RPAREN
  123                     | func_header_start LPAREN parameter_list RPAREN

  124 class_func_header_start: typename func_class ID
  125                        | LIST func_class ID

  126 func_class: ID METH

  127 parameter_list: parameter_list COMMA typename pass_variabledef
  128               | typename pass_variabledef

  129 pass_variabledef: variabledef
  130                 | REFER ID

  131 nopar_class_func_header: class_func_header_start LPAREN RPAREN

  132 decl_statements: declarations statements
  133                | declarations
  134                | statements
  135                | %empty

  136 declarations: declarations decltype typename variabledefs SEMI
  137             | decltype typename variabledefs SEMI

  138 decltype: STATIC
  139         | %empty

  140 statements: statements statement
  141           | statement

  142 statement: expression_statement
  143          | if_statement
  144          | while_statement
  145          | for_statement
  146          | return_statement
  147          | io_statement
  148          | comp_statement
  149          | CONTINUE SEMI
  150          | BREAK SEMI
  151          | SEMI

  152 expression_statement: general_expression SEMI

  153 if_statement: IF LPAREN general_expression if_mid RPAREN statement
  154             | IF LPAREN general_expression if_mid RPAREN statement ELSE statement

  155 if_mid: %empty

  156 $@10: %empty

  157 $@11: %empty

  158 while_statement: WHILE LPAREN $@10 general_expression $@11 RPAREN statement

  159 $@12: %empty

  160 $@13: %empty

  161 $@14: %empty

  162 $@15: %empty

  163 for_statement: FOR $@12 LPAREN optexpr SEMI $@13 optexpr $@14 SEMI optexpr $@15 RPAREN statement

  164 optexpr: general_expression
  165        | %empty

  166 return_statement: RETURN optexpr SEMI

  167 io_statement: CIN INP in_list SEMI
  168             | COUT OUT out_list SEMI

  169 in_list: in_list INP in_item
  170        | in_item

  171 in_item: variable

  172 out_list: out_list OUT out_item
  173         | out_item

  174 out_item: general_expression
  175         | STRING

  176 $@16: %empty

  177 $@17: %empty

  178 comp_statement: LBRACE $@16 decl_statements $@17 RBRACE

  179 $@18: %empty

  180 main_function: main_header $@18 LBRACE decl_statements RBRACE

  181 main_header: INT MAIN LPAREN RPAREN


Terminals, with rules where they appear

$end (0) 0
error (256)
TYPEDEF (258) 11
CHAR (259) 14
INT (260) 15 181
FLOAT (261) 16
CONST (262) 23
UNION (263) 84 101
CLASS (264) 63
PRIVATE (265) 69
PROTECTED (266) 70
PUBLIC (267) 71
STATIC (268) 138
VOID (269) 17
LIST (270) 18 81 94 125
CONTINUE (271) 149
BREAK (272) 150
THIS (273) 50
IF (274) 153 154
ELSE (275) 154
WHILE (276) 158
FOR (277) 163
RETURN (278) 166
LENGTH (279) 40
NEW (280) 41
CIN (281) 167
COUT (282) 168
MAIN (283) 181
FCONST (284) 60
CCONST (285) 58
OROP (286) 27
ANDOP (287) 28
NOTOP (288) 33
SIZEOP (289) 35
LPAREN (290) 39 40 41 43 44 48 92 99 122 123 131 153 154 158 163 181
RPAREN (291) 39 40 41 43 44 48 92 99 122 123 131 153 154 158 163 181
SEMI (292) 11 23 63 77 84 90 91 101 102 136 137 149 150 151 152 163
    166 167 168
DOT (293) 47
COMMA (294) 24 51 78 95 103 112 127
ASSIGN (295) 26 53 54 107
COLON (296) 65 69 70 71
LBRACK (297) 20 21 46 61
RBRACK (298) 20 21 46 61
REFER (299) 98 130
LBRACE (300) 64 85 110 117 119 121 178 180
RBRACE (301) 64 85 110 117 119 121 178 180
METH (302) 126
INP (303) 167 169
OUT (304) 168 172
EQUOP (305) 29
RELOP (306) 30
ADDOP (307) 31 34
MULOP (308) 32
LOWER_THAN_ELSE (309)
INCDEC (310) 36 37
LPAR (311)
RPAR (312)
ICONST (313) 20 59
ID (314) 11 13 26 47 49 63 65 81 83 93 94 101 124 125 126 130
STRING (315) 54 111 175
LISTFUNC (316) 48


Nonterminals, with rules where they appear

$accept (62)
    on left: 0
program (63)
    on left: 1, on right: 0
global_declarations (64)
    on left: 2 3, on right: 1 2
global_declaration (65)
    on left: 4 5 6 7 8 9, on right: 2
typedef_declaration (66)
    on left: 11, on right: 4
$@1 (67)
    on left: 10, on right: 11
typename (68)
    on left: 12 13, on right: 11 23 77 93 95 96 102 124 127 128 136
    137
standard_type (69)
    on left: 14 15 16 17, on right: 12 44
listspec (70)
    on left: 18 19, on right: 11 97
dims (71)
    on left: 20 21 22, on right: 11 20 21 26 81 83 97
const_declaration (72)
    on left: 23, on right: 5
constdefs (73)
    on left: 24 25, on right: 23 24
constdef (74)
    on left: 26, on right: 24 25
expression (75)
    on left: 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44
    45, on right: 27 28 29 30 31 32 33 34 35 55 109
variable (76)
    on left: 46 47 48 49 50, on right: 36 37 38 39 46 47 53 54 171
general_expression (77)
    on left: 51 52, on right: 40 41 43 46 48 51 56 152 153 154 158
    164 174
assignment (78)
    on left: 53 54 55, on right: 52 53
expression_list (79)
    on left: 56 57, on right: 39 61
constant (80)
    on left: 58 59 60, on right: 42
listexpression (81)
    on left: 61, on right: 45
class_declaration (82)
    on left: 63, on right: 6
$@2 (83)
    on left: 62, on right: 63
class_body (84)
    on left: 64, on right: 63
parent (85)
    on left: 65 66, on right: 64
members_methods (86)
    on left: 67 68, on right: 64 67
access (87)
    on left: 69 70 71 72, on right: 67 68
member_or_method (88)
    on left: 73 74, on right: 67 68
member (89)
    on left: 75 76, on right: 73
var_declaration (90)
    on left: 77, on right: 75 88
variabledefs (91)
    on left: 78 79, on right: 77 78 136 137
variabledef (92)
    on left: 81 83, on right: 78 79 105 129
$@3 (93)
    on left: 80, on right: 81
$@4 (94)
    on left: 82, on right: 83
anonymous_union (95)
    on left: 84, on right: 76
union_body (96)
    on left: 85, on right: 84 101
fields (97)
    on left: 86 87, on right: 85 86
field (98)
    on left: 88, on right: 86 87
method (99)
    on left: 89, on right: 74
short_func_declaration (100)
    on left: 90 91, on right: 89 114
short_par_func_header (101)
    on left: 92, on right: 90
func_header_start (102)
    on left: 93 94, on right: 92 99 123
parameter_types (103)
    on left: 95 96, on right: 92 95
pass_list_dims (104)
    on left: 97 98, on right: 95 96
nopar_func_header (105)
    on left: 99, on right: 91 121
union_declaration (106)
    on left: 101, on right: 7
$@5 (107)
    on left: 100, on right: 101
global_var_declaration (108)
    on left: 102, on right: 8
init_variabledefs (109)
    on left: 103 104, on right: 102 103
init_variabledef (110)
    on left: 105, on right: 103 104
initializer (111)
    on left: 107 108, on right: 105
$@6 (112)
    on left: 106, on right: 107
init_value (113)
    on left: 109 110 111, on right: 26 107 112 113
init_values (114)
    on left: 112 113, on right: 110 112
func_declaration (115)
    on left: 114 115, on right: 9
full_func_declaration (116)
    on left: 117 119 121, on right: 115
$@7 (117)
    on left: 116, on right: 117
$@8 (118)
    on left: 118, on right: 119
$@9 (119)
    on left: 120, on right: 121
full_par_func_header (120)
    on left: 122 123, on right: 117
class_func_header_start (121)
    on left: 124 125, on right: 122 131
func_class (122)
    on left: 126, on right: 124 125
parameter_list (123)
    on left: 127 128, on right: 122 123 127
pass_variabledef (124)
    on left: 129 130, on right: 127 128
nopar_class_func_header (125)
    on left: 131, on right: 119
decl_statements (126)
    on left: 132 133 134 135, on right: 117 119 121 178 180
declarations (127)
    on left: 136 137, on right: 132 133 136
decltype (128)
    on left: 138 139, on right: 49 136 137
statements (129)
    on left: 140 141, on right: 132 134 140
statement (130)
    on left: 142 143 144 145 146 147 148 149 150 151, on right: 140
    141 153 154 158 163
expression_statement (131)
    on left: 152, on right: 142
if_statement (132)
    on left: 153 154, on right: 143
if_mid (133)
    on left: 155, on right: 153 154
while_statement (134)
    on left: 158, on right: 144
$@10 (135)
    on left: 156, on right: 158
$@11 (136)
    on left: 157, on right: 158
for_statement (137)
    on left: 163, on right: 145
$@12 (138)
    on left: 159, on right: 163
$@13 (139)
    on left: 160, on right: 163
$@14 (140)
    on left: 161, on right: 163
$@15 (141)
    on left: 162, on right: 163
optexpr (142)
    on left: 164 165, on right: 163 166
return_statement (143)
    on left: 166, on right: 146
io_statement (144)
    on left: 167 168, on right: 147
in_list (145)
    on left: 169 170, on right: 167 169
in_item (146)
    on left: 171, on right: 169 170
out_list (147)
    on left: 172 173, on right: 168 172
out_item (148)
    on left: 174 175, on right: 172 173
comp_statement (149)
    on left: 178, on right: 148
$@16 (150)
    on left: 176, on right: 178
$@17 (151)
    on left: 177, on right: 178
main_function (152)
    on left: 180, on right: 1
$@18 (153)
    on left: 179, on right: 180
main_header (154)
    on left: 181, on right: 180


State 0

    0 $accept: . program $end

    $default  reduce using rule 3 (global_declarations)

    program              go to state 1
    global_declarations  go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: global_declarations . main_function
    2 global_declarations: global_declarations . global_declaration

    TYPEDEF  shift, and go to state 4
    CHAR     shift, and go to state 5
    INT      shift, and go to state 6
    FLOAT    shift, and go to state 7
    CONST    shift, and go to state 8
    UNION    shift, and go to state 9
    CLASS    shift, and go to state 10
    VOID     shift, and go to state 11
    LIST     shift, and go to state 12
    ID       shift, and go to state 13

    global_declaration       go to state 14
    typedef_declaration      go to state 15
    typename                 go to state 16
    standard_type            go to state 17
    const_declaration        go to state 18
    class_declaration        go to state 19
    short_func_declaration   go to state 20
    short_par_func_header    go to state 21
    func_header_start        go to state 22
    nopar_func_header        go to state 23
    union_declaration        go to state 24
    global_var_declaration   go to state 25
    func_declaration         go to state 26
    full_func_declaration    go to state 27
    full_par_func_header     go to state 28
    class_func_header_start  go to state 29
    nopar_class_func_header  go to state 30
    main_function            go to state 31
    main_header              go to state 32


State 3

    0 $accept: program $end .

    $default  accept


State 4

   11 typedef_declaration: TYPEDEF . typename listspec ID $@1 dims SEMI

    CHAR   shift, and go to state 5
    INT    shift, and go to state 33
    FLOAT  shift, and go to state 7
    VOID   shift, and go to state 11
    ID     shift, and go to state 13

    typename       go to state 34
    standard_type  go to state 17


State 5

   14 standard_type: CHAR .

    $default  reduce using rule 14 (standard_type)


State 6

   15 standard_type: INT .
  181 main_header: INT . MAIN LPAREN RPAREN

    MAIN  shift, and go to state 35

    $default  reduce using rule 15 (standard_type)


State 7

   16 standard_type: FLOAT .

    $default  reduce using rule 16 (standard_type)


State 8

   23 const_declaration: CONST . typename constdefs SEMI

    CHAR   shift, and go to state 5
    INT    shift, and go to state 33
    FLOAT  shift, and go to state 7
    VOID   shift, and go to state 11
    ID     shift, and go to state 13

    typename       go to state 36
    standard_type  go to state 17


State 9

  101 union_declaration: UNION . ID $@5 union_body SEMI

    ID  shift, and go to state 37


State 10

   63 class_declaration: CLASS . ID $@2 class_body SEMI

    ID  shift, and go to state 38


State 11

   17 standard_type: VOID .

    $default  reduce using rule 17 (standard_type)


State 12

   94 func_header_start: LIST . ID
  125 class_func_header_start: LIST . func_class ID

    ID  shift, and go to state 39

    func_class  go to state 40


State 13

   13 typename: ID .

    $default  reduce using rule 13 (typename)


State 14

    2 global_declarations: global_declarations global_declaration .

    $default  reduce using rule 2 (global_declarations)


State 15

    4 global_declaration: typedef_declaration .

    $default  reduce using rule 4 (global_declaration)


State 16

   93 func_header_start: typename . ID
  102 global_var_declaration: typename . init_variabledefs SEMI
  124 class_func_header_start: typename . func_class ID

    LIST  shift, and go to state 41
    ID    shift, and go to state 42

    variabledef        go to state 43
    init_variabledefs  go to state 44
    init_variabledef   go to state 45
    func_class         go to state 46


State 17

   12 typename: standard_type .

    $default  reduce using rule 12 (typename)


State 18

    5 global_declaration: const_declaration .

    $default  reduce using rule 5 (global_declaration)


State 19

    6 global_declaration: class_declaration .

    $default  reduce using rule 6 (global_declaration)


State 20

  114 func_declaration: short_func_declaration .

    $default  reduce using rule 114 (func_declaration)


State 21

   90 short_func_declaration: short_par_func_header . SEMI

    SEMI  shift, and go to state 47


State 22

   92 short_par_func_header: func_header_start . LPAREN parameter_types RPAREN
   99 nopar_func_header: func_header_start . LPAREN RPAREN
  123 full_par_func_header: func_header_start . LPAREN parameter_list RPAREN

    LPAREN  shift, and go to state 48


State 23

   91 short_func_declaration: nopar_func_header . SEMI
  121 full_func_declaration: nopar_func_header . $@9 LBRACE decl_statements RBRACE

    SEMI  shift, and go to state 49

    $default  reduce using rule 120 ($@9)

    $@9  go to state 50


State 24

    7 global_declaration: union_declaration .

    $default  reduce using rule 7 (global_declaration)


State 25

    8 global_declaration: global_var_declaration .

    $default  reduce using rule 8 (global_declaration)


State 26

    9 global_declaration: func_declaration .

    $default  reduce using rule 9 (global_declaration)


State 27

  115 func_declaration: full_func_declaration .

    $default  reduce using rule 115 (func_declaration)


State 28

  117 full_func_declaration: full_par_func_header . $@7 LBRACE decl_statements RBRACE

    $default  reduce using rule 116 ($@7)

    $@7  go to state 51


State 29

  122 full_par_func_header: class_func_header_start . LPAREN parameter_list RPAREN
  131 nopar_class_func_header: class_func_header_start . LPAREN RPAREN

    LPAREN  shift, and go to state 52


State 30

  119 full_func_declaration: nopar_class_func_header . $@8 LBRACE decl_statements RBRACE

    $default  reduce using rule 118 ($@8)

    $@8  go to state 53


State 31

    1 program: global_declarations main_function .

    $default  reduce using rule 1 (program)


State 32

  180 main_function: main_header . $@18 LBRACE decl_statements RBRACE

    $default  reduce using rule 179 ($@18)

    $@18  go to state 54


State 33

   15 standard_type: INT .

    $default  reduce using rule 15 (standard_type)


State 34

   11 typedef_declaration: TYPEDEF typename . listspec ID $@1 dims SEMI

    LIST  shift, and go to state 55

    $default  reduce using rule 19 (listspec)

    listspec  go to state 56


State 35

  181 main_header: INT MAIN . LPAREN RPAREN

    LPAREN  shift, and go to state 57


State 36

   23 const_declaration: CONST typename . constdefs SEMI

    ID  shift, and go to state 58

    constdefs  go to state 59
    constdef   go to state 60


State 37

  101 union_declaration: UNION ID . $@5 union_body SEMI

    $default  reduce using rule 100 ($@5)

    $@5  go to state 61


State 38

   63 class_declaration: CLASS ID . $@2 class_body SEMI

    $default  reduce using rule 62 ($@2)

    $@2  go to state 62


State 39

   94 func_header_start: LIST ID .
  126 func_class: ID . METH

    METH  shift, and go to state 63

    $default  reduce using rule 94 (func_header_start)


State 40

  125 class_func_header_start: LIST func_class . ID

    ID  shift, and go to state 64


State 41

   81 variabledef: LIST . ID $@3 dims

    ID  shift, and go to state 65


State 42

   83 variabledef: ID . $@4 dims
   93 func_header_start: typename ID .
  126 func_class: ID . METH

    METH  shift, and go to state 63

    LPAREN    reduce using rule 93 (func_header_start)
    $default  reduce using rule 82 ($@4)

    $@4  go to state 66


State 43

  105 init_variabledef: variabledef . initializer

    ASSIGN  shift, and go to state 67

    $default  reduce using rule 108 (initializer)

    initializer  go to state 68


State 44

  102 global_var_declaration: typename init_variabledefs . SEMI
  103 init_variabledefs: init_variabledefs . COMMA init_variabledef

    SEMI   shift, and go to state 69
    COMMA  shift, and go to state 70


State 45

  104 init_variabledefs: init_variabledef .

    $default  reduce using rule 104 (init_variabledefs)


State 46

  124 class_func_header_start: typename func_class . ID

    ID  shift, and go to state 71


State 47

   90 short_func_declaration: short_par_func_header SEMI .

    $default  reduce using rule 90 (short_func_declaration)


State 48

   92 short_par_func_header: func_header_start LPAREN . parameter_types RPAREN
   99 nopar_func_header: func_header_start LPAREN . RPAREN
  123 full_par_func_header: func_header_start LPAREN . parameter_list RPAREN

    CHAR    shift, and go to state 5
    INT     shift, and go to state 33
    FLOAT   shift, and go to state 7
    VOID    shift, and go to state 11
    RPAREN  shift, and go to state 72
    ID      shift, and go to state 13

    typename         go to state 73
    standard_type    go to state 17
    parameter_types  go to state 74
    parameter_list   go to state 75


State 49

   91 short_func_declaration: nopar_func_header SEMI .

    $default  reduce using rule 91 (short_func_declaration)


State 50

  121 full_func_declaration: nopar_func_header $@9 . LBRACE decl_statements RBRACE

    LBRACE  shift, and go to state 76


State 51

  117 full_func_declaration: full_par_func_header $@7 . LBRACE decl_statements RBRACE

    LBRACE  shift, and go to state 77


State 52

  122 full_par_func_header: class_func_header_start LPAREN . parameter_list RPAREN
  131 nopar_class_func_header: class_func_header_start LPAREN . RPAREN

    CHAR    shift, and go to state 5
    INT     shift, and go to state 33
    FLOAT   shift, and go to state 7
    VOID    shift, and go to state 11
    RPAREN  shift, and go to state 78
    ID      shift, and go to state 13

    typename        go to state 79
    standard_type   go to state 17
    parameter_list  go to state 80


State 53

  119 full_func_declaration: nopar_class_func_header $@8 . LBRACE decl_statements RBRACE

    LBRACE  shift, and go to state 81


State 54

  180 main_function: main_header $@18 . LBRACE decl_statements RBRACE

    LBRACE  shift, and go to state 82


State 55

   18 listspec: LIST .

    $default  reduce using rule 18 (listspec)


State 56

   11 typedef_declaration: TYPEDEF typename listspec . ID $@1 dims SEMI

    ID  shift, and go to state 83


State 57

  181 main_header: INT MAIN LPAREN . RPAREN

    RPAREN  shift, and go to state 84


State 58

   26 constdef: ID . dims ASSIGN init_value

    $default  reduce using rule 22 (dims)

    dims  go to state 85


State 59

   23 const_declaration: CONST typename constdefs . SEMI
   24 constdefs: constdefs . COMMA constdef

    SEMI   shift, and go to state 86
    COMMA  shift, and go to state 87


State 60

   25 constdefs: constdef .

    $default  reduce using rule 25 (constdefs)


State 61

  101 union_declaration: UNION ID $@5 . union_body SEMI

    LBRACE  shift, and go to state 88

    union_body  go to state 89


State 62

   63 class_declaration: CLASS ID $@2 . class_body SEMI

    COLON  shift, and go to state 90

    $default  reduce using rule 66 (parent)

    class_body  go to state 91
    parent      go to state 92


State 63

  126 func_class: ID METH .

    $default  reduce using rule 126 (func_class)


State 64

  125 class_func_header_start: LIST func_class ID .

    $default  reduce using rule 125 (class_func_header_start)


State 65

   81 variabledef: LIST ID . $@3 dims

    $default  reduce using rule 80 ($@3)

    $@3  go to state 93


State 66

   83 variabledef: ID $@4 . dims

    $default  reduce using rule 22 (dims)

    dims  go to state 94


State 67

  107 initializer: ASSIGN . $@6 init_value

    $default  reduce using rule 106 ($@6)

    $@6  go to state 95


State 68

  105 init_variabledef: variabledef initializer .

    $default  reduce using rule 105 (init_variabledef)


State 69

  102 global_var_declaration: typename init_variabledefs SEMI .

    $default  reduce using rule 102 (global_var_declaration)


State 70

  103 init_variabledefs: init_variabledefs COMMA . init_variabledef

    LIST  shift, and go to state 41
    ID    shift, and go to state 96

    variabledef       go to state 43
    init_variabledef  go to state 97


State 71

  124 class_func_header_start: typename func_class ID .

    $default  reduce using rule 124 (class_func_header_start)


State 72

   99 nopar_func_header: func_header_start LPAREN RPAREN .

    $default  reduce using rule 99 (nopar_func_header)


State 73

   96 parameter_types: typename . pass_list_dims
  128 parameter_list: typename . pass_variabledef

    LIST   shift, and go to state 98
    REFER  shift, and go to state 99
    ID     shift, and go to state 96

    $default  reduce using rule 19 (listspec)

    listspec          go to state 100
    variabledef       go to state 101
    pass_list_dims    go to state 102
    pass_variabledef  go to state 103


State 74

   92 short_par_func_header: func_header_start LPAREN parameter_types . RPAREN
   95 parameter_types: parameter_types . COMMA typename pass_list_dims

    RPAREN  shift, and go to state 104
    COMMA   shift, and go to state 105


State 75

  123 full_par_func_header: func_header_start LPAREN parameter_list . RPAREN
  127 parameter_list: parameter_list . COMMA typename pass_variabledef

    RPAREN  shift, and go to state 106
    COMMA   shift, and go to state 107


State 76

  121 full_func_declaration: nopar_func_header $@9 LBRACE . decl_statements RBRACE

    STATIC    shift, and go to state 108
    CONTINUE  shift, and go to state 109
    BREAK     shift, and go to state 110
    THIS      shift, and go to state 111
    IF        shift, and go to state 112
    WHILE     shift, and go to state 113
    FOR       shift, and go to state 114
    RETURN    shift, and go to state 115
    LENGTH    shift, and go to state 116
    NEW       shift, and go to state 117
    CIN       shift, and go to state 118
    COUT      shift, and go to state 119
    FCONST    shift, and go to state 120
    CCONST    shift, and go to state 121
    NOTOP     shift, and go to state 122
    SIZEOP    shift, and go to state 123
    LPAREN    shift, and go to state 124
    SEMI      shift, and go to state 125
    LBRACK    shift, and go to state 126
    LBRACE    shift, and go to state 127
    ADDOP     shift, and go to state 128
    INCDEC    shift, and go to state 129
    ICONST    shift, and go to state 130
    LISTFUNC  shift, and go to state 131

    RBRACE    reduce using rule 135 (decl_statements)
    $default  reduce using rule 139 (decltype)

    expression            go to state 132
    variable              go to state 133
    general_expression    go to state 134
    assignment            go to state 135
    constant              go to state 136
    listexpression        go to state 137
    decl_statements       go to state 138
    declarations          go to state 139
    decltype              go to state 140
    statements            go to state 141
    statement             go to state 142
    expression_statement  go to state 143
    if_statement          go to state 144
    while_statement       go to state 145
    for_statement         go to state 146
    return_statement      go to state 147
    io_statement          go to state 148
    comp_statement        go to state 149


State 77

  117 full_func_declaration: full_par_func_header $@7 LBRACE . decl_statements RBRACE

    STATIC    shift, and go to state 108
    CONTINUE  shift, and go to state 109
    BREAK     shift, and go to state 110
    THIS      shift, and go to state 111
    IF        shift, and go to state 112
    WHILE     shift, and go to state 113
    FOR       shift, and go to state 114
    RETURN    shift, and go to state 115
    LENGTH    shift, and go to state 116
    NEW       shift, and go to state 117
    CIN       shift, and go to state 118
    COUT      shift, and go to state 119
    FCONST    shift, and go to state 120
    CCONST    shift, and go to state 121
    NOTOP     shift, and go to state 122
    SIZEOP    shift, and go to state 123
    LPAREN    shift, and go to state 124
    SEMI      shift, and go to state 125
    LBRACK    shift, and go to state 126
    LBRACE    shift, and go to state 127
    ADDOP     shift, and go to state 128
    INCDEC    shift, and go to state 129
    ICONST    shift, and go to state 130
    LISTFUNC  shift, and go to state 131

    RBRACE    reduce using rule 135 (decl_statements)
    $default  reduce using rule 139 (decltype)

    expression            go to state 132
    variable              go to state 133
    general_expression    go to state 134
    assignment            go to state 135
    constant              go to state 136
    listexpression        go to state 137
    decl_statements       go to state 150
    declarations          go to state 139
    decltype              go to state 140
    statements            go to state 141
    statement             go to state 142
    expression_statement  go to state 143
    if_statement          go to state 144
    while_statement       go to state 145
    for_statement         go to state 146
    return_statement      go to state 147
    io_statement          go to state 148
    comp_statement        go to state 149


State 78

  131 nopar_class_func_header: class_func_header_start LPAREN RPAREN .

    $default  reduce using rule 131 (nopar_class_func_header)


State 79

  128 parameter_list: typename . pass_variabledef

    LIST   shift, and go to state 41
    REFER  shift, and go to state 151
    ID     shift, and go to state 96

    variabledef       go to state 101
    pass_variabledef  go to state 103


State 80

  122 full_par_func_header: class_func_header_start LPAREN parameter_list . RPAREN
  127 parameter_list: parameter_list . COMMA typename pass_variabledef

    RPAREN  shift, and go to state 152
    COMMA   shift, and go to state 107


State 81

  119 full_func_declaration: nopar_class_func_header $@8 LBRACE . decl_statements RBRACE

    STATIC    shift, and go to state 108
    CONTINUE  shift, and go to state 109
    BREAK     shift, and go to state 110
    THIS      shift, and go to state 111
    IF        shift, and go to state 112
    WHILE     shift, and go to state 113
    FOR       shift, and go to state 114
    RETURN    shift, and go to state 115
    LENGTH    shift, and go to state 116
    NEW       shift, and go to state 117
    CIN       shift, and go to state 118
    COUT      shift, and go to state 119
    FCONST    shift, and go to state 120
    CCONST    shift, and go to state 121
    NOTOP     shift, and go to state 122
    SIZEOP    shift, and go to state 123
    LPAREN    shift, and go to state 124
    SEMI      shift, and go to state 125
    LBRACK    shift, and go to state 126
    LBRACE    shift, and go to state 127
    ADDOP     shift, and go to state 128
    INCDEC    shift, and go to state 129
    ICONST    shift, and go to state 130
    LISTFUNC  shift, and go to state 131

    RBRACE    reduce using rule 135 (decl_statements)
    $default  reduce using rule 139 (decltype)

    expression            go to state 132
    variable              go to state 133
    general_expression    go to state 134
    assignment            go to state 135
    constant              go to state 136
    listexpression        go to state 137
    decl_statements       go to state 153
    declarations          go to state 139
    decltype              go to state 140
    statements            go to state 141
    statement             go to state 142
    expression_statement  go to state 143
    if_statement          go to state 144
    while_statement       go to state 145
    for_statement         go to state 146
    return_statement      go to state 147
    io_statement          go to state 148
    comp_statement        go to state 149


State 82

  180 main_function: main_header $@18 LBRACE . decl_statements RBRACE

    STATIC    shift, and go to state 108
    CONTINUE  shift, and go to state 109
    BREAK     shift, and go to state 110
    THIS      shift, and go to state 111
    IF        shift, and go to state 112
    WHILE     shift, and go to state 113
    FOR       shift, and go to state 114
    RETURN    shift, and go to state 115
    LENGTH    shift, and go to state 116
    NEW       shift, and go to state 117
    CIN       shift, and go to state 118
    COUT      shift, and go to state 119
    FCONST    shift, and go to state 120
    CCONST    shift, and go to state 121
    NOTOP     shift, and go to state 122
    SIZEOP    shift, and go to state 123
    LPAREN    shift, and go to state 124
    SEMI      shift, and go to state 125
    LBRACK    shift, and go to state 126
    LBRACE    shift, and go to state 127
    ADDOP     shift, and go to state 128
    INCDEC    shift, and go to state 129
    ICONST    shift, and go to state 130
    LISTFUNC  shift, and go to state 131

    RBRACE    reduce using rule 135 (decl_statements)
    $default  reduce using rule 139 (decltype)

    expression            go to state 132
    variable              go to state 133
    general_expression    go to state 134
    assignment            go to state 135
    constant              go to state 136
    listexpression        go to state 137
    decl_statements       go to state 154
    declarations          go to state 139
    decltype              go to state 140
    statements            go to state 141
    statement             go to state 142
    expression_statement  go to state 143
    if_statement          go to state 144
    while_statement       go to state 145
    for_statement         go to state 146
    return_statement      go to state 147
    io_statement          go to state 148
    comp_statement        go to state 149


State 83

   11 typedef_declaration: TYPEDEF typename listspec ID . $@1 dims SEMI

    $default  reduce using rule 10 ($@1)

    $@1  go to state 155


State 84

  181 main_header: INT MAIN LPAREN RPAREN .

    $default  reduce using rule 181 (main_header)


State 85

   20 dims: dims . LBRACK ICONST RBRACK
   21     | dims . LBRACK RBRACK
   26 constdef: ID dims . ASSIGN init_value

    ASSIGN  shift, and go to state 156
    LBRACK  shift, and go to state 157


State 86

   23 const_declaration: CONST typename constdefs SEMI .

    $default  reduce using rule 23 (const_declaration)


State 87

   24 constdefs: constdefs COMMA . constdef

    ID  shift, and go to state 58

    constdef  go to state 158


State 88

   85 union_body: LBRACE . fields RBRACE
